*** empty log message ***

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
-Authors of GNU Libtool.
+Authors of GNU Libtool.  The following people contributed enough in
+order to warrant exchanging legal papers with the Free Software
+Foundation.
 
 Gordon Matzigkeit.  Designed and implemented libtool.
