--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,23 @@
+1998-06-30  Gordon Matzigkeit  <gord@fig.org>
+
+	* ltmain.in: Convenience archive support.  From Ulrich Drepper.
+
+	* ltconfig.in (postinstall_commands): Change libraries to be
+	executable on Solaris in order to prevent ldd from moaning.  From
+	Julian Gosnell.
+	(whole_archive_flag_spec): New variable to shortcut convenience
+	archive expansion.  From Ulrich Drepper.
+
+1998-06-11  Gordon Matzigkeit  <gord@profitpress.com>
+
+	* ltconfig.in, ltmain.in: Change globs to accept forward slashes
+	in absolute directory names used on DOS-like systems.  From Robert
+	S. Maier.
+
+Thu May 28 18:59:08 1998  Ian Lance Taylor  <ian@cygnus.com>
+
+	* ltconfig.in: Use $SHELL when invoking shell scripts.
+
 1998-05-21  Gordon Matzigkeit  <gord@profitpress.com>
 
 	* ltmain.in (compile): Don't have `-static' turn off libtool
