--- a/TODO
+++ b/TODO
@@ -37,7 +37,8 @@ Reminded by Alexandre Oliva.  This requires looking up installed
 libtool libraries for transparent support.
 
 * Alexandre Oliva suggests that we hardcode paths into libraries, as
-well as binaries:  `... -Wl,-soname -Wl,/tmp/libtest.so.0 ...'.
+well as binaries:  `... -Wl,-soname -Wl,/tmp/libtest.so.0 ...'.  Tim
+Mooney wants the same thing.
 
 * Tom Lane adds that HP-UX's linker, at least (I've also found this on
 AIX 4), distinguishes between global function and global variable
