--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1998-10-27  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* demo/Makefile.am (objdir): there are no longer quotes around
+	objdir in the libtool script
+
 1998-10-27  Gordon Matzigkeit  <gord@trick.fig.org>
 
 	* ltconfig.in (dynamic_linker): Echo the result to fd 6, so that
