* AUTHORS: added myself as a co-maintainer 	* THANKS: and removed my name from here

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@ order to warrant exchanging legal papers with the Free Software
 Foundation.
 
 Gordon Matzigkeit.  Designed and implemented libtool.
+Alexandre Oliva <oliva@dcc.unicamp.br>.  Co-maintainer.
